refactor: migrate Collections/Arrays.asList to Java 9+ factory methods
Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Collections.singletonList() with List.of(),
Collections.emptyList() with List.of(), and Arrays.asList() with
List.of() in test code.

Result:
Cleaner, more idiomatic Java 17 code with immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization